--- a/src/components/_Hero.scss
+++ b/src/components/_Hero.scss
@@ -1,6 +1,7 @@
 .hero-container {
   margin: 0 auto;
-  margin-top: 25vh;
+  margin-top: 20vh;
+  margin-left: 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -51,7 +52,7 @@
     line-height: 50px;
     color: black;
     margin: 80px 0;
-    margin-bottom: 50vh;
+    margin-bottom: 20vh;
     
     span {
       display: block;
