--- a/src/components/_About.scss
+++ b/src/components/_About.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
 
   .terminal {
+    
     .terminal-header {
       height: 28px;
       background-color: #e4e3e5;
@@ -10,6 +11,8 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
+      text-align: center;
+      overflow: overlay;
 
       .header-button {
         width: 12px;
@@ -32,12 +35,13 @@
         background-color: #33c948;
         border: solid 1px #2dbb41;
       }
-      
-      i {
-        margin-left: 440px;
-        font-family: 'Menlo';
-      }
 
+      span {
+        display: table;
+        margin: 0 auto;
+        //margin-left: 440px;
+        font-family: "Menlo";
+      }
     }
 
     .terminal-window {
@@ -45,7 +49,8 @@
       border-radius: 0 0 4px 4px;
       box-shadow: 0 50px 100px rgba(50, 50, 93, 0.15),
         0 15px 35px rgba(50, 50, 93, 0.2), 0 5px 15px rgba(0, 0, 0, 0.12);
-      font-family: 'Monaco', Consolas, 'Lucida Console', monospace;
+      font-family: "Monaco", Consolas, "Lucida Console", monospace;
+      margin-bottom: 20vh;
 
       a {
         color: $linkTeal;
@@ -71,7 +76,7 @@
           font-weight: bolder;
 
           &:before {
-            content: '>\a0';
+            content: ">\a0";
           }
         }
 
@@ -83,7 +88,7 @@
           color: red;
           font-weight: bolder;
         }
-        
+
         i {
           color: rgb(242, 228, 217);
         }
@@ -91,7 +96,7 @@
         text {
           color: goldenrod;
         }
-        
+
         a {
           color: #00b4b4;
           font-weight: bolder;
