--- a/src/components/_Contact.scss
+++ b/src/components/_Contact.scss
@@ -1,16 +1,16 @@
 .contact-links {
-  font-family: 'Camphor', Open Sans, Segoe UI, sans-serif;
-  font-size: 1.2em;
+  font-family: 'Courier New';
+  font-size: 2em;
   text-align: center;
-  margin-top: 100px;
-  padding-bottom: 100px;
+  margin-top: 60px;
+  padding-bottom: 60px;
   display: flex;
   justify-content: center;
 
   @include mobile {
     flex-direction: column;
-    margin-top: 80px;
-    padding-bottom: 80px;
+    margin-top: 60px;
+    padding-bottom: 60px;
   }
 
   span {
@@ -19,7 +19,7 @@
     }
 
     &:after {
-      content: '||';
+      content: ' ';
       color: black;
       margin: 0 30px;
 
@@ -29,7 +29,7 @@
       }
     }
 
-    &:nth-child(3) {
+    &:nth-child(4) {
       &:after {
         content: '';
         margin: 0;
