--- a/src/components/CSS/_About.scss
+++ b/src/components/CSS/_About.scss
@@ -89,6 +89,11 @@
           font-weight: bolder;
         }
 
+        u {
+          color: white;
+          text-decoration: none;
+        }
+
         i {
           color: rgb(242, 228, 217);
         }
