--- a/src/components/CSS/_Projects.scss
+++ b/src/components/CSS/_Projects.scss
@@ -20,10 +20,11 @@
     }
 
     .project-image {
-      width: 50%;
+      width: 45%;
       position: absolute !important; // overide Gatsby-image style
       top: 0;
       left: 0;
+      margin-bottom: 50px;
 
       @include tablet {
         display: none;
@@ -117,7 +118,7 @@
       p {
         margin-bottom: 30px;
         line-height: 27px;
-        color: rgb(29.6%, 29.6%, 29.6%)
+        color: rgba(0%, 0%, 0%, 0.7);
       }
 
       a {
